# crabot-python

./: .env.example  .gitignore  README.md  pyproject.toml
src/: command_handler.py  gateway_contracts.py  main.py  rest_client.py
src/agents/catering_agent/: __init__.py  agent.py  viking_api.py
src/agents/currency_agent/: __init__.py  agent.py  currency_api.py
src/agents/diet_analyzer_agent/: agent.py
src/agents/orchestration_agent/: agent.py
